--- a/index.html
+++ b/index.html
@@ -847,27 +847,25 @@
         </section>
 
         <section id="page-application" class="view-section">
-            <main class="max-w-5xl mx-auto p-10 min-h-screen text-center">
-                <h2 class="text-3xl font-headline font-bold text-primary mb-4">Franchise Application Form</h2>
-<div class="text-center mb-10">
-    <h2 class="text-3xl font-headline font-bold text-primary mb-2">Franchise Application Form</h2>
-    <p class="text-stone-500 italic">Please complete the formal application below.</p>
-</div>
+    <main class="max-w-5xl mx-auto p-10 min-h-screen text-center">
+        <div class="text-center mb-10">
+            <h2 class="text-3xl font-headline font-bold text-primary mb-2">Franchise Application Form</h2>
+            <p class="text-stone-500 italic">Please complete the formal application below.</p>
+        </div>
 
-<div class="bg-white rounded-2xl shadow-xl border border-stone-100 overflow-hidden">
-    <iframe 
-        src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfy2lpgOwdUFvFRIoQn7HZ76nL_U1n7pnBuYxjlc_9dRenspw/viewform?embedded=true" width="640" height="4393" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>?embedded=true" 
-        width="100%" 
-        height="2200" 
-        frameborder="0" 
-        marginheight="0" 
-        marginwidth="0">
-        Loading…
-    </iframe>
-</div>
-
-            </main>
-        </section>
+        <div class="bg-white rounded-2xl shadow-xl border border-stone-100 overflow-hidden">
+            <iframe 
+                src="https://docs.google.com/forms/d/e/1FAIpQLSfy2lpgOwdUFvFRIoQn7HZ76nL_U1n7pnBuYxjlc_9dRenspw/viewform?embedded=true" 
+                width="100%" 
+                height="4400" 
+                frameborder="0" 
+                marginheight="0" 
+                marginwidth="0">
+                Loading…
+            </iframe>
+        </div>
+    </main>
+</section>
 
         <section id="page-privacy" class="view-section">
             <main class="max-w-5xl mx-auto p-10 min-h-screen text-center">
