Replace placeholder images with real Chakra photos

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             
             <!-- PDF PAGE 1: HERO -->
             <section class="relative min-h-[85vh] flex items-center justify-center bg-stone-900 overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?auto=format&fit=crop&q=80&w=1600" class="absolute inset-0 w-full h-full object-cover opacity-50" alt="Hero Background">
+                <img src="images/hero-chakra.jpg" alt="Chakra Restaurant Interior">
                 <div class="absolute inset-0 bg-gradient-to-b from-stone-900/40 to-stone-900/90"></div>
                 <div class="relative z-10 text-center px-4 max-w-4xl">
                     <h1 class="text-5xl md:text-7xl font-headline font-bold text-[var(--chakra-gold)] mb-6">Chakra: The Future of Progressive Indian Dining</h1>
@@ -204,21 +204,21 @@
                 <div class="grid md:grid-cols-3 gap-8">
                     <div class="group cursor-pointer">
                         <div class="overflow-hidden rounded-3xl mb-6 aspect-square shadow-md">
-                            <img src="https://images.unsplash.com/photo-1588166524941-3bf61a9c41db?auto=format&fit=crop&q=80&w=600" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" alt="Kulcha">
+                            <img src="images/kulcha.jpg" alt="Butter Chicken Kulcha">
                         </div>
                         <h4 class="font-bold text-xl text-stone-900">Butter Chicken Kulcha</h4>
                         <p class="text-sm text-stone-500 italic mt-2">A modern visual masterpiece and social media icon.</p>
                     </div>
                     <div class="group cursor-pointer">
                         <div class="overflow-hidden rounded-3xl mb-6 aspect-square shadow-md">
-                            <img src="https://images.unsplash.com/photo-1544148103-0773bf10d330?auto=format&fit=crop&q=80&w=600" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" alt="Beef">
+                            <img src="images/beef-empiler.jpg" alt="Beef Empiler">
                         </div>
                         <h4 class="font-bold text-xl text-stone-900">Beef Empiler</h4>
                         <p class="text-sm text-stone-500 italic mt-2">Vertical stack of aromatic rice and masala beef.</p>
                     </div>
                     <div class="group cursor-pointer">
                         <div class="overflow-hidden rounded-3xl mb-6 aspect-square shadow-md">
-                            <img src="https://images.unsplash.com/photo-1533777857889-4be7c70b33f7?auto=format&fit=crop&q=80&w=600" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" alt="Naan">
+                            <img src="images/gf-naan.jpg" alt="Gluten-Free Naan">
                         </div>
                         <h4 class="font-bold text-xl text-stone-900">Gluten-Free Naan</h4>
                         <p class="text-sm text-stone-500 italic mt-2">A game-changer serving guests others can't accommodate.</p>
@@ -282,7 +282,7 @@
                     </div>
                     <div class="relative">
                         <div class="absolute -inset-4 bg-[var(--chakra-gold)] opacity-10 rounded-[3rem] -rotate-3"></div>
-                        <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?auto=format&fit=crop&q=80&w=800" class="rounded-[2.5rem] shadow-2xl relative" alt="Chakra Interior">
+                        <img src="images/design-ambience.jpg" alt="Chakra Restaurant Interior Design">
                     </div>
                 </div>
             </section>
