--- a/index.html
+++ b/index.html
@@ -149,18 +149,18 @@
         <section id="page-home" class="view-section active">
             
             <!-- PDF PAGE 1: HERO -->
-            <section class="relative min-h-[85vh] flex items-center justify-center bg-stone-900 overflow-hidden">
-                <img src="images/hero-chakra.jpg" alt="Chakra Restaurant Interior">
-                <div class="absolute inset-0 bg-gradient-to-b from-stone-900/40 to-stone-900/90"></div>
-                <div class="relative z-10 text-center px-4 max-w-4xl">
-                    <h1 class="text-5xl md:text-7xl font-headline font-bold text-[var(--chakra-gold)] mb-6">Chakra: The Future of Progressive Indian Dining</h1>
-                    <p class="text-xl md:text-2xl text-stone-200 font-light italic leading-relaxed">Join us in bringing the "Music of Taste" to every corner of Australia through contemporary Indian cuisine that balances the five senses.</p>
-                    <div class="mt-12 flex justify-center gap-6">
-                        <button onclick="showPage('application')" class="bg-[var(--chakra-gold)] text-white px-8 py-3 rounded-full font-bold uppercase text-xs tracking-widest hover:brightness-110 transition-all">Submit Interest</button>
-                        <button onclick="window.scrollTo({top: window.innerHeight, behavior: 'smooth'})" class="border-2 border-white/30 text-white px-8 py-3 rounded-full font-bold uppercase text-xs tracking-widest hover:bg-white/10 transition-all">Explore the Circle</button>
-                    </div>
-                </div>
-            </section>
+         <section class="relative min-h-[85vh] flex items-center justify-center bg-stone-900 overflow-hidden bg-cover bg-center bg-no-repeat" style="background-image: url('images/hero-chakra.jpg');">
+    <div class="absolute inset-0 bg-gradient-to-b from-stone-900/60 to-stone-900/90"></div>
+    
+    <div class="relative z-10 text-center px-4 max-w-4xl">
+        <h1 class="text-5xl md:text-7xl font-headline font-bold text-[var(--chakra-gold)] mb-6">Chakra: The Future of Progressive Indian Dining</h1>
+        <p class="text-xl md:text-2xl text-stone-200 font-light italic leading-relaxed">Join us in bringing the "Music of Taste" to every corner of Australia through contemporary Indian cuisine that balances the five senses.</p>
+        <div class="mt-12 flex justify-center gap-6">
+            <button onclick="showPage('application')" class="bg-[var(--chakra-gold)] text-white px-8 py-3 rounded-full font-bold uppercase text-xs tracking-widest hover:brightness-110 transition-all">Submit Interest</button>
+            <button onclick="window.scrollTo({top: window.innerHeight, behavior: 'smooth'})" class="border-2 border-white/30 text-white px-8 py-3 rounded-full font-bold uppercase text-xs tracking-widest hover:bg-white/10 transition-all">Explore the Circle</button>
+        </div>
+    </div>
+</section>
 
             <!-- PDF PAGE 2: PHILOSOPHY -->
             <section class="brochure-section bg-white text-center">
