Replaced franchise web address

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                                 <li><strong class="text-white uppercase tracking-tighter text-[9px]">Trading Name:</strong> <br>Chakra Restaurant</li>
                                 <li><strong class="text-white uppercase tracking-tighter text-[9px]">ABN:</strong> <br>69 605 437 885</li>
                                 <li><strong class="text-white uppercase tracking-tighter text-[9px]">Head Office:</strong> <br>48 Delphine Avenue, Dianella, WA, 6059</li>
-                                <li><strong class="text-white uppercase tracking-tighter text-[9px]">Franchise Web:</strong> <br>www.chakrarestaurant.com.au/franchise</li>
+                                <li><strong class="text-white uppercase tracking-tighter text-[9px]">Franchise Web:</strong> <br>https://franchise.chakrarestaurant.com.au/</li>
                             </ul>
                         </div>
                     </div>
